Fix horizontal scroll bar

--- a/src/scss/03_objects/_inputs.scss
+++ b/src/scss/03_objects/_inputs.scss
@@ -1,6 +1,7 @@
 // -------- INPUTS -------- //
 
 .field {
+	position: relative;
 	&:not(.field--checkbox) {
 		margin-bottom: 3em;
 	}
